# teams-transcript-formatter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
